# Claude-Code-Manager

./: .env.backup  .env.c  .env.example  .gitignore  .mcp.json  CLAUDE.md  INTERVIEW-QUESTION.md  PROGRESS.md  README.md  TEST.md  dev-review-issues.md  pyproject.toml  restore-interviewee.sh  start-dev.sh
.claude-manager/: loop_signal_5.json
alembic/: env.py
alembic/versions/: 0270803e7300_add_monitor_sessions_and_checks_tables.py  (+51 more)
archive-do-not-use/: README.txt  env.b.archived-20260610
backend/: config.py  database.py  main.py
backend/api/: ask_user.py  (+29 more)
desktop/: README.md  ccm_capture.py  requirements.txt
docs/: PROJECT-TODO-DESIGN.md  SHARED-TASK-RELAY-DESIGN.md  SKILLS-SYSTEM-DESIGN.md  SKILLS-SYSTEM-OVERVIEW.md  SUB-AGENT-ISSUES.md  TEAM-CCM-DESIGN.md  agent-based-testing-survey.md  linear-integration-research.md  lingtai-comparison-analysis.md  monitor-mode-design.md  multica-competitive-analysis.md  native-commands-integration.md  pty-interactive-mode.md  task-timeout-settings.md  update-restart-design.md  worker-deployment-guide.md
extension/: background.js  content.js  manifest.json  options.css  options.html  options.js
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
plans/: monitor-mode-design.md  pr-monitor-todo.md  pr-monitor.md
scripts/: auto_login.py  benchmark_codex_transport.py  capture_browser_url.py  cdp_login.py  claude_oauth_login.py  codex_login.py  consolidate_sessions.py  pre-start.sh  pty_smoke.py  refresh_pty.sh  setup.sh  update_migrate.sh  worker_phase1_smoke.py
site/: ai4sci.html
(+256 files in other folders)
