[project]
name = "claude-manager"
version = "0.1.0"
description = "Web-based manager for multiple Claude Code instances"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "alembic>=1.13.0",
    "auto-backup @ git+https://github.com/zjw49246/auto-backup",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0", "psycopg2-binary>=2.9.0"]
mysql = ["aiomysql>=0.2.0", "pymysql>=1.1.0"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
